workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__bottom.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, Point(0.0, 7.5))"
---
Location {
    key: (
        0,
        7,
    ),
    block_index: 7,
    bit_index: 24,
    point: Point(
        0.0,
        7.5,
    ),
    distance: 7.5,
    radians: 3.1415927,
    contained: true,
}
