workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__bottom_left.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, Point(-7.5, 7.5))"
---
Location {
    key: (
        -8,
        7,
    ),
    point: Point(
        -7.5,
        7.5,
    ),
    block_index: 5,
    bit_index: 24,
    contained: true,
    distance: 10.606602,
    radians: 3.926991,
}
