workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__bottom_oob.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, Point(0.0, 8.0))"
---
Location {
    key: (
        0,
        8,
    ),
    point: Point(
        0.0,
        8.0,
    ),
    block_index: 10,
    bit_index: 0,
    contained: false,
    distance: 8.0,
    radians: 3.1415927,
}
