workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__bottom_right.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, (7.5, 7.5))"
---
Location {
    key: (
        7,
        7,
    ),
    block_index: 7,
    bit_index: 31,
    point: (
        7.5,
        7.5,
    ),
    distance: 10.606601717798213,
    radians: 2.356194490192345,
    contained: true,
}
