workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__center.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, (0.0, 0.0))"
---
Location {
    key: (
        0,
        0,
    ),
    block_index: 6,
    bit_index: 0,
    point: (
        0.0,
        0.0,
    ),
    distance: 0.0,
    radians: 0.0,
    contained: true,
}
