workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__left.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, Point(-7.5, 0.0))"
---
Location {
    key: (
        -8,
        0,
    ),
    point: Point(
        -7.5,
        0.0,
    ),
    block_index: 4,
    bit_index: 0,
    contained: true,
    distance: 7.5,
    radians: 4.712389,
}
