workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__left_oob.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, (-8.1, 0.0))"
---
Location {
    key: (
        -8,
        0,
    ),
    block_index: 4,
    bit_index: 0,
    point: (
        -8.1,
        0.0,
    ),
    distance: 8.1,
    radians: 4.71238898038469,
    contained: false,
}
