workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__order_distance.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: sorted_locations_ids
---
[
    "center",
    "top",
    "top-right",
]
