workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__order_radians.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: sorted_locations_ids
---
[
    "top",
    "top-right",
    "right",
    "bottom-right",
    "bottom",
    "bottom-left",
    "left",
    "top-left",
]
