workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__right_oob.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, (8.0, 0.0))"
---
Location {
    key: (
        8,
        0,
    ),
    block_index: 8,
    bit_index: 0,
    point: (
        8.0,
        0.0,
    ),
    distance: 8.0,
    radians: 1.5707963267948966,
    contained: false,
}
