workspaces/spatial-grid-map/src-rust/snapshots/spatial_grid_map__location__tests__snap_x_just_under.snap
---
source: workspaces/spatial-grid-map/src-rust/./location_tests.rs
expression: "Location::new(2, 1.0, (7.0 - TOLERANCE * 0.5, 7.0))"
---
Location {
    key: (
        7,
        7,
    ),
    block_index: 7,
    bit_index: 31,
    point: (
        6.99992375,
        7.0,
    ),
    distance: 9.899441019866428,
    radians: 2.35619993665058,
    contained: true,
}
